library/src/libqtablewidget.h

typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QMetaObject QMetaObject;
typedef struct QMimeData QMimeData;
typedef struct QModelIndex QModelIndex;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QTableWidget QTableWidget;
typedef struct QTableWidgetItem QTableWidgetItem;
typedef struct QTableWidgetSelectionRange QTableWidgetSelectionRange;
typedef struct QWidget QWidget;
QTableWidget* QTableWidget_new(QWidget* parent);
QTableWidget* QTableWidget_new2();
QTableWidget* QTableWidget_new3(int rows, int columns);
QTableWidget* QTableWidget_new4(int rows, int columns, QWidget* parent);
QMetaObject* QTableWidget_MetaObject(const QTableWidget* self);
void* QTableWidget_Metacast(QTableWidget* self, const char* param1);
int QTableWidget_Metacall(QTableWidget* self, int param1, int param2, void** param3);
libqt_string QTableWidget_Tr(const char* s);
void QTableWidget_SetRowCount(QTableWidget* self, int rows);
int QTableWidget_RowCount(const QTableWidget* self);
void QTableWidget_SetColumnCount(QTableWidget* self, int columns);
int QTableWidget_ColumnCount(const QTableWidget* self);
int QTableWidget_Row(const QTableWidget* self, QTableWidgetItem* item);
int QTableWidget_Column(const QTableWidget* self, QTableWidgetItem* item);
QTableWidgetItem* QTableWidget_Item(const QTableWidget* self, int row, int column);
void QTableWidget_SetItem(QTableWidget* self, int row, int column, QTableWidgetItem* item);
QTableWidgetItem* QTableWidget_TakeItem(QTableWidget* self, int row, int column);
libqt_list /* of QTableWidgetItem* */ QTableWidget_Items(const QTableWidget* self, QMimeData* data);
QModelIndex* QTableWidget_IndexFromItem(const QTableWidget* self, QTableWidgetItem* item);
QTableWidgetItem* QTableWidget_ItemFromIndex(const QTableWidget* self, QModelIndex* index);
QTableWidgetItem* QTableWidget_VerticalHeaderItem(const QTableWidget* self, int row);
void QTableWidget_SetVerticalHeaderItem(QTableWidget* self, int row, QTableWidgetItem* item);
QTableWidgetItem* QTableWidget_TakeVerticalHeaderItem(QTableWidget* self, int row);
QTableWidgetItem* QTableWidget_HorizontalHeaderItem(const QTableWidget* self, int column);
void QTableWidget_SetHorizontalHeaderItem(QTableWidget* self, int column, QTableWidgetItem* item);
QTableWidgetItem* QTableWidget_TakeHorizontalHeaderItem(QTableWidget* self, int column);
void QTableWidget_SetVerticalHeaderLabels(QTableWidget* self, libqt_list /* of libqt_string */ labels);
void QTableWidget_SetHorizontalHeaderLabels(QTableWidget* self, libqt_list /* of libqt_string */ labels);
int QTableWidget_CurrentRow(const QTableWidget* self);
int QTableWidget_CurrentColumn(const QTableWidget* self);
QTableWidgetItem* QTableWidget_CurrentItem(const QTableWidget* self);
void QTableWidget_SetCurrentItem(QTableWidget* self, QTableWidgetItem* item);
void QTableWidget_SetCurrentItem2(QTableWidget* self, QTableWidgetItem* item, int command);
void QTableWidget_SetCurrentCell(QTableWidget* self, int row, int column);
void QTableWidget_SetCurrentCell2(QTableWidget* self, int row, int column, int command);
void QTableWidget_SortItems(QTableWidget* self, int column);
void QTableWidget_SetSortingEnabled(QTableWidget* self, bool enable);
bool QTableWidget_IsSortingEnabled(const QTableWidget* self);
void QTableWidget_EditItem(QTableWidget* self, QTableWidgetItem* item);
void QTableWidget_OpenPersistentEditor(QTableWidget* self, QTableWidgetItem* item);
void QTableWidget_ClosePersistentEditor(QTableWidget* self, QTableWidgetItem* item);
bool QTableWidget_IsPersistentEditorOpen(const QTableWidget* self, QTableWidgetItem* item);
QWidget* QTableWidget_CellWidget(const QTableWidget* self, int row, int column);
void QTableWidget_SetCellWidget(QTableWidget* self, int row, int column, QWidget* widget);
void QTableWidget_RemoveCellWidget(QTableWidget* self, int row, int column);
void QTableWidget_SetRangeSelected(QTableWidget* self, QTableWidgetSelectionRange* range, bool selectVal);
libqt_list /* of QTableWidgetSelectionRange* */ QTableWidget_SelectedRanges(const QTableWidget* self);
libqt_list /* of QTableWidgetItem* */ QTableWidget_SelectedItems(const QTableWidget* self);
libqt_list /* of QTableWidgetItem* */ QTableWidget_FindItems(const QTableWidget* self, libqt_string text, int flags);
int QTableWidget_VisualRow(const QTableWidget* self, int logicalRow);
int QTableWidget_VisualColumn(const QTableWidget* self, int logicalColumn);
QTableWidgetItem* QTableWidget_ItemAt(const QTableWidget* self, QPoint* p);
QTableWidgetItem* QTableWidget_ItemAt2(const QTableWidget* self, int x, int y);
QRect* QTableWidget_VisualItemRect(const QTableWidget* self, QTableWidgetItem* item);
QTableWidgetItem* QTableWidget_ItemPrototype(const QTableWidget* self);
void QTableWidget_SetItemPrototype(QTableWidget* self, QTableWidgetItem* item);
void QTableWidget_ScrollToItem(QTableWidget* self, QTableWidgetItem* item);
void QTableWidget_InsertRow(QTableWidget* self, int row);
void QTableWidget_InsertColumn(QTableWidget* self, int column);
void QTableWidget_RemoveRow(QTableWidget* self, int row);
void QTableWidget_RemoveColumn(QTableWidget* self, int column);
void QTableWidget_Clear(QTableWidget* self);
void QTableWidget_ClearContents(QTableWidget* self);
void QTableWidget_ItemPressed(QTableWidget* self, QTableWidgetItem* item);
void QTableWidget_ItemClicked(QTableWidget* self, QTableWidgetItem* item);
void QTableWidget_ItemDoubleClicked(QTableWidget* self, QTableWidgetItem* item);
void QTableWidget_ItemActivated(QTableWidget* self, QTableWidgetItem* item);
void QTableWidget_ItemEntered(QTableWidget* self, QTableWidgetItem* item);
void QTableWidget_ItemChanged(QTableWidget* self, QTableWidgetItem* item);
void QTableWidget_CurrentItemChanged(QTableWidget* self, QTableWidgetItem* current, QTableWidgetItem* previous);
void QTableWidget_ItemSelectionChanged(QTableWidget* self);
void QTableWidget_CellPressed(QTableWidget* self, int row, int column);
void QTableWidget_CellClicked(QTableWidget* self, int row, int column);
void QTableWidget_CellDoubleClicked(QTableWidget* self, int row, int column);
void QTableWidget_CellActivated(QTableWidget* self, int row, int column);
void QTableWidget_CellEntered(QTableWidget* self, int row, int column);
void QTableWidget_CellChanged(QTableWidget* self, int row, int column);
void QTableWidget_CurrentCellChanged(QTableWidget* self, int currentRow, int currentColumn, int previousRow, int previousColumn);
bool QTableWidget_Event(QTableWidget* self, QEvent* e);
libqt_list /* of libqt_string */ QTableWidget_MimeTypes(const QTableWidget* self);
QMimeData* QTableWidget_MimeData(const QTableWidget* self, libqt_list /* of QTableWidgetItem* */ items);
bool QTableWidget_DropMimeData(QTableWidget* self, int row, int column, QMimeData* data, int action);
int QTableWidget_SupportedDropActions(const QTableWidget* self);
void QTableWidget_DropEvent(QTableWidget* self, QDropEvent* event);
libqt_string QTableWidget_Tr2(const char* s, const char* c);
libqt_string QTableWidget_Tr3(const char* s, const char* c, int n);
void QTableWidget_SortItems2(QTableWidget* self, int column, int order);
void QTableWidget_ScrollToItem2(QTableWidget* self, QTableWidgetItem* item, int hint);